# Vortex

./: README.md  index.html  pyproject.toml  repomix-output.xml  script.js  styles.css
src/: __init__.py  audio_player.py  cli.py  constants.py  scripts.py  security.py  server.py  styles.py  ui.py  upload.py  utils.py
vortex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
