[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex"
version = "1.0.0"
description = "Fast, cross-platform file transfer between devices over local Wi-Fi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Colvyn"}
]
keywords = ["file-transfer", "http-server", "wifi", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Filesystems",
]

[project.scripts]
vortex = "src.cli:main"

[project.urls]
Repository = "https://github.com/colvyn01/vortex"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
